progress: trying to work through placing both items on same bar with different text sizes

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -4,17 +4,18 @@ header {
     font-family: Helvetica;
     color: white;
 }
-myheader a {
+#myheader a {
     font-size: xx-large;
     text-align: left;
 }
-myheader b {
+#myheader b {
     font-size: small;
     text-align: right;
 }
-mynav {
+#mynav {
     background-color: #333333;
 }
 body {
     background-color: white;
+    text-align: left;
 }
