attempts: trying to adjust the spacing on the page, swapped div for span

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -17,5 +17,10 @@ header {
 }
 body {
     background-color: white;
+}
+span main {
     text-align: left;
+}
+span column{
+    text-align: right;
 }
