feat: fixed title bar, need to move login

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -3,12 +3,10 @@ header {
     font-weight: bold;
     font-family: Helvetica;
     color: white;
-}
-#myheader a {
+    padding: 15px;
     font-size: xx-large;
-    text-align: left;
 }
-#myheader b {
+.login {
     font-size: small;
     text-align: right;
 }
