--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,4 +1,4 @@
-header {
+.Top {
     background-color: #AA0000;
     font-weight: bold;
     font-family: Helvetica;
@@ -12,6 +12,21 @@ header {
     padding-top: 10px;
     color: white;
 }
+.Middle {
+    background-color: #333333;
+    font-family: Helvetica;
+    color: white;
+    padding: 15px;
+    font-size: small;
+    padding-bottom: 20px;
+}
+ul {
+    float: right;
+}
+li {
+    display: inline
+}
+
 #mynav {
     background-color: #333333;
 }
