--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -26,10 +26,6 @@ ul {
 li {
     display: inline
 }
-
-#mynav {
-    background-color: #333333;
-}
 body {
     background-color: white;
 }
@@ -38,4 +34,10 @@ span main {
 }
 span column{
     text-align: right;
+}
+footer {
+    background-color: #333333;
+    font-size: small;
+    color: white;
+    padding-block: 20px;
 }
